--- a/.github/workflows/executable-finder.yml
+++ b/.github/workflows/executable-finder.yml
@@ -2,10 +2,10 @@ name: Executable Finder
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches-ignore: [ master ] #on master it only runs on ubuntu to speed up
+    branches-ignore: [ master, 1.x ]
 
   pull_request:
-    branches-ignore: [ master ]
+    branches-ignore: [ master, 1.x ]
 
 env:
   extensions: mbstring #intl, pcov
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, macos-latest, windows-latest]
-        php-versions: ['7.4']
+        php-versions: ['8.0']
     name: Executable Finder on Local Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
     - name: Checkout
@@ -32,7 +32,7 @@ jobs:
         coverage: none
         
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: composer install --prefer-dist --no-progress
 
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
@@ -45,7 +45,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, macos-latest, windows-latest]
-        php-versions: ['7.4']
+        php-versions: ['8.0']
     name: Executable Finder on Phar Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
     - name: Checkout
@@ -61,7 +61,7 @@ jobs:
         coverage: none
         
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --no-dev
+      run: composer install --prefer-dist --no-progress --no-dev
 
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
@@ -98,7 +98,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, macos-latest, windows-latest]
-        php-versions: ['7.4']
+        php-versions: ['8.0']
     name: Executable Finder on Global Test (${{ matrix.operating-system }}, PHP ${{ matrix.php-versions }})
     steps:
     - name: Checkout
@@ -114,7 +114,7 @@ jobs:
         coverage: none
         
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest --no-dev
+      run: composer install --prefer-dist --no-progress --no-dev
 
     - name: Install Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
