--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "bin/githooks"
     ],
     "require-dev": {
+        "php": ">=7.1",
         "larapack/dd": "^1.1",
         "laravel-zero/foundation": "^5.0 | ^6.0 | ^7.0 | ^8.0",
         "mikey179/vfsstream": "^1.6",
