--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "TestsDir\\": "testsDir/"
         }
     },
     "config": {
