--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        
-        "symfony/yaml": "^3.0 | ^4.0 | ^5.0"
+        "php": ">=7.1" 
     },
     "require-dev": {
         "laravel-zero/framework": "^5.0 | ^6.0 | ^7.0 | ^8.0",
@@ -43,7 +41,8 @@
         "phpstan/phpstan": "^0.12.46",
         "phpunit/php-code-coverage": "^6.0 | ^7.0 | ^8.0 | ^9.0",
         "phpunit/phpunit": "^7.0 | ^8.0 | ^9.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "symfony/yaml": "^3.0 | ^4.0 | ^5.0"
     },
     "autoload": {
         "psr-4": {
