--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,11 @@
         }
     ],
     "require": {
-        "php": ">=7.1" 
+        "php": ">=7.1"
     },
     "require-dev": {
         "laravel-zero/framework": "^5.0 | ^6.0 | ^7.0 | ^8.0",
+        "laravel-zero/phar-updater": "^1.0.6",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.3",
         "php-mock/php-mock": "^2.2",
