feature(deploy) Created deploy by phar and self-update command

--- a/.github/workflows/master-ci.yml
+++ b/.github/workflows/master-ci.yml
@@ -2,7 +2,7 @@ name: Master
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches: [ master, 1.x ] 
+    branches: [ master, 1.x, phar ] 
   pull_request:
     branches: [ master, 1.x ]
 
