--- a/.github/workflows/executable-finder.yml
+++ b/.github/workflows/executable-finder.yml
@@ -2,7 +2,7 @@ name: Executable Finder
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches-ignore: [ master, 1.x ]
+    branches-ignore: [ master, 1.x, phar ]
 
   pull_request:
     branches-ignore: [ master, 1.x ]
