--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -2,7 +2,7 @@ name: Schedule CI
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches: [ master ]
+    branches: [ 1.x ]
   schedule:
     - cron:  '0 4 * * sun' # Sundays at 04 am
 
