--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -1,6 +1,6 @@
 # Configuración general de la herramienta
 Options:
-  execution: fast #full (default), smart, fast
+  execution: full #full (default), smart, fast
 
 # Herramientas que se van a ejecutar
 Tools:
@@ -14,7 +14,7 @@ Tools:
 phpstan:
     config: './qa/phpstan.neon'
     #memory-limit: '1G' # Examples: 1M 2000M 1G 5G
-    paths: ['./']
+    paths: ['src']
     # level: 8 #level 0-8 (0 default, 8 max)
 
 #Se ejecuta contra la raiz del proyecto
