--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -2,7 +2,7 @@ name: Schedule CI
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches: [ 1.x ]
+    branches: [ 1.x, pipeline ]
   schedule:
     - cron:  '0 4 * * sun' # Sundays at 04 am
 
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.4']
+        php-versions: ['8.0']
     name: Code Coverage
     steps:
     - name: Checkout
@@ -62,7 +62,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.4']
+        php-versions: ['8.0']
     name: Infection
     steps:
     - name: Checkout
@@ -96,7 +96,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest]
-        php-versions: ['7.4']
+        php-versions: ['8.0']
     name: PhpMetrics
     steps:
     - name: Checkout
