--- a/.github/workflows/schedule-ci.yml
+++ b/.github/workflows/schedule-ci.yml
@@ -44,13 +44,15 @@ jobs:
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      run: |
+        composer install --prefer-dist --no-progress
+        chmod -R +x tools/*
+
+    - name: Install Global Parallel-Lint
+      run: composer global require php-parallel-lint/php-parallel-lint
 
     - name: Tests with code coverage
-      run: vendor/bin/phpunit --coverage-html ${{ env.report_path }}/coverage
-
-    - name: Tests documentation
-      run: vendor/bin/phpunit --testdox-html ${{ env.report_path }}/documentation.html
+      run: vendor/bin/phpunit --coverage-html ${{ env.report_path }}/coverage --testdox-html ${{ env.report_path }}/documentation.html --testdox-html ${{ env.report_path }}/documentation.html
 
     - uses: actions/upload-artifact@v2
       with:
@@ -77,10 +79,23 @@ jobs:
         ini-values: "post_max_size=256M" #optional
         coverage: xdebug
         
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+    - name: Get composer cache directory
+      id: composercache
+      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-    - name: Install Parallel-Lint
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.composercache.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+        restore-keys: ${{ runner.os }}-composer-
+
+    - name: Install dependencies
+      run: |
+        composer install --prefer-dist --no-progress
+        chmod -R +x tools/*
+
+    - name: Install Global Parallel-Lint
       run: composer global require php-parallel-lint/php-parallel-lint
 
     - name: Infection execute
@@ -91,7 +106,7 @@ jobs:
         name: Infection
         path: ${{ env.report_path }}
 
-  PhpMetrics:    
+  phpMetrics:    
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
@@ -112,18 +127,17 @@ jobs:
         coverage: xdebug
         
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      run: |
+        composer install --prefer-dist --no-progress
+        chmod -R +x tools/*
 
-    - name: Install PhPMetrics
-      run:  composer global require 'phpmetrics/phpmetrics'
+    - name: Install Global Parallel-Lint and PhPMetrics
+      run:  composer global require phpmetrics/phpmetrics php-parallel-lint/php-parallel-lint
 
-    - name: Install Parallel-Lint
-      run: composer global require php-parallel-lint/php-parallel-lint
-
-    - name: Junit
+    - name: Junit Report
       run: vendor/bin/phpunit --log-junit ${{ env.report_path }}/junit.xml
 
-    - name: PhPMetrics execute
+    - name: PhPMetrics Report
       run: phpmetrics --report-html=${{ env.report_path }}/phpmetrics --junit=${{ env.report_path }}/junit.xml ./src
 
     - uses: actions/upload-artifact@v2
