--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -2,7 +2,6 @@ name: Code Analysis
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches-ignore: [ master, pipeline ]
   pull_request:
     branches-ignore: [ master ]
 
@@ -19,7 +18,7 @@ jobs:
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.0'
+        php-version: '7.1'
 
     - name: Get composer cache directory
       id: composercache
@@ -33,7 +32,9 @@ jobs:
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      run: |
+        composer install --prefer-dist --no-progress
+        chmod -R +x tools/*
 
     - name: Execute PhpStan
       run: php githooks tool phpstan
@@ -48,7 +49,7 @@ jobs:
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.0'
+        php-version: '7.1'
 
     - name: Get composer cache directory
       id: composercache
@@ -62,7 +63,9 @@ jobs:
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      run: |
+        composer install --prefer-dist --no-progress
+        chmod -R +x tools/*
 
     - name: Execute Php Code Sniffer
       run: php githooks tool phpcs
@@ -77,7 +80,7 @@ jobs:
     - name: Install PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.0'
+        php-version: '7.1'
 
     - name: Get composer cache directory
       id: composercache
@@ -91,7 +94,9 @@ jobs:
         restore-keys: ${{ runner.os }}-composer-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      run: |
+        composer install --prefer-dist --no-progress
+        chmod -R +x tools/*
 
     - name: Execute Php Mess Detector
       run: php githooks tool phpmd
