feat(check-security) Created tag check-security in githooks.yml for set executablePath

--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -42,4 +42,8 @@ phpcpd:
   executablePath: tools/php71/phpcpd
   paths: ['./']
   exclude: ['vendor', 'tests']
+
+check-security:
+  executablePath: tools/php71/local-php-security-checker
+
  
