refactor(security-checker) check-security tag is renamed to security-checker

--- a/qa/githooks.dist.yml
+++ b/qa/githooks.dist.yml
@@ -1,8 +1,8 @@
 Options:
-  execution: full #full (default), smart, fast
+  execution: full #full (default), fast
 
 Tools:
-  - check-security
+  - security-checker
   - phpstan
   - parallel-lint
   - phpcs
@@ -10,29 +10,37 @@ Tools:
   - phpcpd
 
 # Configuration of each tool
+# security-checker:
+#   executablePath: security-checker
+
 # phpstan:
-#     config: './qa/phpstan.neon'
-#     memory-limit: '1G' # Examples: 1M 2000M 1G 5G
-#     paths: ['./src']
-#     level: 8 #level 0-8 (0 default, 8 max)
+#   executablePath: phpstan
+#   config: './qa/phpstan.neon'
+#   memory-limit: '1G' # Examples: 1M 2000M 1G 5G
+#   paths: ['./src']
+#   level: 8 #level 0-8 (0 default, 8 max)
 
 # parallel-lint:
-#     paths: ['./']
-#     exclude: [vendor]
+#   executablePath: parallel-lint
+#   paths: ['./']
+#   exclude: [vendor]
 
 # phpcs:
-#     paths: ['./']
-#     standard: './myRules.xml' #or predefined rules: Squiz, PSR12, Generic, PEAR
-#     ignore: [vendor]
-#     error-severity: 1
-#     warning-severity: 6
+#   executablePath: phpcs
+#   paths: ['./']
+#   standard: './myRules.xml' #or predefined rules: Squiz, PSR12, Generic, PEAR
+#   ignore: [vendor]
+#   error-severity: 1
+#   warning-severity: 6
   
 # phpmd:
+#   executablePath: phpmd
 #   paths: ['./src/']
 #   rules: './myRules.xml' #or predefined rules cleancode,codesize,controversial,design,naming,unusedcode
 #   exclude: [vendor]
 
 # phpcpd:
+#   executablePath: phpcpd
 #   paths: ['./']
 #   exclude: ['vendor']
  
