tests(ci/cd) Launch release tests only in release branch

--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -2,6 +2,7 @@ name: Code Analysis
 # https://github.com/shivammathur/setup-php
 on:
   push:
+   branches-ignore: [ release** ]
   pull_request:
     branches-ignore: [ master ]
 
