--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
-name: Main Tests
+name: Release Tests
 # https://github.com/shivammathur/setup-php
 on:
   push:
-    branches-ignore: [ release** ]
+    branches: [ release** ]
+
   pull_request:
     branches-ignore: [ master ]
 
@@ -60,8 +61,6 @@ jobs:
 
     - name: Testing the Aplication
       run: |
-        echo -e "\e[42m\e[30m**** Main Test Suite ****\033[0m"
-        vendor/bin/phpunit --order-by random
-        echo -e "\e[42m\e[30m**** GitfilesTest ****\033[0m"
-        vendor/bin/phpunit tests/Integration/FileUtilsTest.php
+        echo -e "\e[42m\e[30m**** Release Test Suite ****\033[0m"
+        vendor/bin/phpunit --group release
       shell: bash
