--- a/.github/workflows/main-tests.yml
+++ b/.github/workflows/main-tests.yml
@@ -63,5 +63,5 @@ jobs:
         echo -e "\e[42m\e[30m**** Main Test Suite ****\033[0m"
         vendor/bin/phpunit --order-by random
         echo -e "\e[42m\e[30m**** GitfilesTest ****\033[0m"
-        vendor/bin/phpunit tests/Integration/FileUtilsTest.php
+        vendor/bin/phpunit --group git
       shell: bash
