fix(namespaces) Changed namespaces from App to Wtyd/GitHooks/App to avoid namespace collision with Laravel apps (AppServiceProvider)

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "Wtyd\\GitHooks\\App\\": "app/",
             "Wtyd\\GitHooks\\": "src/"
         }
     },
