--- a/qa/phpstan.neon
+++ b/qa/phpstan.neon
@@ -7,7 +7,7 @@
         # ]
         checkMissingIterableValueType: false
         ignoreErrors: [
-            '#Call to static method [a-zA-Z0-9\\_]+\(\) on an unknown class Storage#',
+            '#Call to an undefined static method Illuminate\\Support\\Facades\\Storage::[a-zA-Z\\_]+\(\)#',
             '#Method Wtyd\\GitHooks\\ConfigurationFile\\Exception\\WrongExecutionValueException::[a-zA-Z0-9\\_]+\(\) has parameter \$executionValue with no typehint specified.#',
             # '#Method [a-zA-Z0-9\\_]+Command::handle\(\)#',
             # '#Property [a-zA-Z0-9\\_]+Command::\$root \(string\) does not accept string\|false.#'
