--- a/qa/phpstan.neon
+++ b/qa/phpstan.neon
@@ -1,5 +1,6 @@
 {
     parameters: {
+        tmpDir: %currentWorkingDirectory%/tools/tmp,
         level: 8
         # paths: [
             # %currentWorkingDirectory%/src,
