fix(phpstan) Phpcpd ignores phpstan dir cache (tools/tmp)

--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -54,7 +54,7 @@ phpmd:
 phpcpd:
   executablePath: tools/php71/phpcpd
   paths: ['./']
-  exclude: [vendor, tests]
+  exclude: [vendor, tests, 'tools/tmp']
 
 security-checker:
   executablePath: tools/php71/local-php-security-checker
