--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "intonate/tinker-zero": "1.*",
-        "laravel-zero/framework": "^5.0 | ^6.0 | ^7.0 | ^8.0",
+        "laravel-zero/framework": "^5.0 | ^6.0 | ^7.0 | 8.*",
         "laravel-zero/phar-updater": "^1.0.6",
         "mikey179/vfsstream": "^1.6",
         "mockery/mockery": "^1.3",
