feat(ConfigurationFile) Options tag can be extracted like an associative array or like an array of arrays (it avoids 'The key 0 is not a valid option'

--- a/qa/githooks.yml
+++ b/qa/githooks.yml
@@ -1,6 +1,6 @@
 # Configuración general de la herramienta
 Options:
-  execution: full #full (default), fast
+  - execution: full #full (default), fast
 
 # Herramientas que se van a ejecutar
 Tools:
