--- a/qa/phpstan.neon
+++ b/qa/phpstan.neon
@@ -10,6 +10,7 @@
         ignoreErrors: [
             '#Call to an undefined static method Illuminate\\Support\\Facades\\Storage::[a-zA-Z\\_]+\(\)#',
             '#Method Wtyd\\GitHooks\\ConfigurationFile\\Exception\\WrongExecutionValueException::[a-zA-Z0-9\\_]+\(\) has parameter \$executionValue with no typehint specified.#',
+            '#Parameter \#1 \$version1 of function version_compare expects string, string\|false given.#' # phpversion returns string|false
             # '#Method [a-zA-Z0-9\\_]+ToolConfigurationFactory::create\(\) has parameter \$toolData with no typehint specified.#'
             # '#Method [a-zA-Z0-9\\_]+Command::handle\(\)#',
             # '#Property [a-zA-Z0-9\\_]+Command::\$root \(string\) does not accept string\|false.#'
